--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 }
