--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation('com.fasterxml.jackson.core:jackson-databind:2.0.1')
 }
+
+task checkstyle {
+  dependsOn(checkstyleMain, checkstyleTest)
+}
